add profile picture upload

--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,9 @@
     "es5-shim": "^4.0.0",
     "bootstrap-css-only": "~3.3.0",
     "ngstorage": "~0.3.0",
-    "lodash": "~2.4.1"
+    "lodash": "~2.4.1",
+    "ng-img-crop": "~0.3.2",
+    "jdenticon": "~1.0.0"
   },
   "main": [
     "app/scripts/app.js",
