--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "unchatbar-user",
-  "version": "0.0.1",
+  "version": "0.0.0",
   "dependencies": {
     "angular": "^1.3.0",
     "json3": "^3.3.0",
@@ -9,7 +9,9 @@
     "ngstorage": "~0.3.0",
     "lodash": "~2.4.1",
     "ng-img-crop": "~0.3.2",
-    "jdenticon": "~1.0.0"
+    "jdenticon": "~1.0.0",
+    "unchatbar-connection": "https://github.com/unchatbar/unchatbar-connection.git",
+    "blockies": "~0.1.1"
   },
   "main": [
     "app/scripts/app.js",
