--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "unchatbar-user",
-  "version": "0.0.1",
+  "version": "0.0.0",
   "repository": {
     "type": "git",
     "url": "git://github.com/unchatbar/unchatbar-user.git"
@@ -43,13 +43,14 @@
     "grunt-ngdocs": "^0.2.6",
     "grunt-svgmin": "^0.4.0",
     "grunt-usemin": "^2.1.1",
-    "grunt-wiredep": "^1.7.0",
+    "grunt-wiredep": "^2.0.0",
     "jasmine-core": "^2.1.3",
     "jshint-stylish": "^0.2.0",
     "load-grunt-tasks": "^0.4.0",
     "time-grunt": "^0.3.1"
   },
   "devDependencies": {
+    "grunt-bump": "^0.3.0",
     "karma": "^0.12.28",
     "karma-coverage": "^0.2.7",
     "karma-jasmine": "^0.3.5",
