--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "unchatbar-user",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "dependencies": {
     "angular": "^1.3.0",
     "json3": "^3.3.0",
@@ -19,7 +19,7 @@
     "app/scripts/service/*.js",
     "app/scripts/controller/*.js",
     "app/scripts/directive/*.js",
-    "app/styles/*.css"
+    "app/styles/custom.css"
   ],
   "devDependencies": {
     "angular-mocks": "~1.3.0",
