--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "unchatbar-user",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "dependencies": {
     "angular": "^1.3.0",
     "json3": "^3.3.0",
@@ -27,6 +27,7 @@
   },
   "appPath": "app",
   "resolutions": {
-    "angular": "^1.3.0"
+    "angular": "^1.3.0",
+    "peerjs": "b00bdee1d3c1615e73f94f4f2f00b0d118b7cff3"
   }
 }
