--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "unchatbar-user",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "repository": {
     "type": "git",
     "url": "git://github.com/unchatbar/unchatbar-user.git"
@@ -47,11 +47,13 @@
     "jasmine-core": "^2.1.3",
     "jshint-stylish": "^0.2.0",
     "load-grunt-tasks": "^0.4.0",
-    "time-grunt": "^0.3.1"
+    "time-grunt": "^0.3.1",
+    "unchatbar-server": "git://github.com/unchatbar/unchatbar-server.git"
   },
   "devDependencies": {
     "grunt-bump": "^0.3.0",
     "karma": "^0.12.28",
+    "grunt-nodemon": "^0.4.0",
     "karma-coverage": "^0.2.7",
     "karma-jasmine": "^0.3.5",
     "karma-phantomjs-launcher": "^0.1.4"
