--- a/bower.json
+++ b/bower.json
@@ -5,12 +5,14 @@
     "angular": "^1.3.0",
     "json3": "^3.3.0",
     "es5-shim": "^4.0.0",
-    "bootstrap-css-only": "~3.3.0",
+    "bootstrap-sass-official": "^3.2.0",
     "ngstorage": "~0.3.0",
     "lodash": "~2.4.1",
     "ng-img-crop": "~0.3.2",
-    "unchatbar-connection": "https://github.com/unchatbar/unchatbar-connection.git#0.0.x",
-    "blockies": "~0.1.1"
+    "unchatbar-connection": "https://github.com/unchatbar/unchatbar-connection.git#redesign",
+    "blockies": "~0.1.1",
+    "angular-gettext": "~2.0.3",
+    "components-font-awesome": "~4.3.0"
   },
   "main": [
     "app/scripts/app.js",
@@ -19,7 +21,8 @@
     "app/scripts/service/*.js",
     "app/scripts/controller/*.js",
     "app/scripts/directive/*.js",
-    "app/styles/custom.css"
+    "app/styles/custom.css",
+    "app/styles/**/*.scss"
   ],
   "devDependencies": {
     "angular-mocks": "~1.3.0",
