--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "grunt-contrib-clean": "^0.5.0",
     "grunt-contrib-concat": "^0.4.0",
     "grunt-contrib-connect": "^0.7.1",
+    "grunt-contrib-compass": "^1.0.0",
     "grunt-contrib-copy": "^0.5.0",
     "grunt-contrib-cssmin": "^0.9.0",
     "grunt-contrib-htmlmin": "^0.3.0",
@@ -52,6 +53,7 @@
   },
   "devDependencies": {
     "grunt-bump": "^0.3.0",
+    "grunt-angular-gettext": "^2.0.1",
     "karma": "^0.12.28",
     "grunt-nodemon": "^0.4.0",
     "karma-coverage": "^0.2.7",
