--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@ language: node_js
 node_js:
   - '0.10'
 before_script:
-  - 'gem install sass --version "=3.2.12"'
-  - 'gem install compass --version "=0.12.2"'
+  - 'gem update --system'
+  - 'gem install compass'
+  - 'gem install sass'
   - 'npm install -g bower grunt-cli'
   - 'bower install'
