--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: node_js
 node_js:
   - '0.10'
 before_script:
+before_install:
   - 'gem update --system'
   - 'gem install compass'
   - 'gem install sass'
