--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "unchatbar-user",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "dependencies": {
     "angular": "^1.3.0",
     "json3": "^3.3.0",
@@ -9,7 +9,7 @@
     "ngstorage": "~0.3.0",
     "lodash": "~2.4.1",
     "ng-img-crop": "~0.3.2",
-    "unchatbar-connection": "https://github.com/unchatbar/unchatbar-connection.git#redesign",
+    "unchatbar-connection": "https://github.com/unchatbar/unchatbar-connection.git#0.1.x",
     "blockies": "~0.1.1",
     "angular-gettext": "~2.0.3",
     "components-font-awesome": "~4.3.0"
