--- a/bower.json
+++ b/bower.json
@@ -2,17 +2,17 @@
   "name": "unchatbar-user",
   "version": "0.1.3",
   "dependencies": {
-    "angular": "^1.3.0",
-    "json3": "^3.3.0",
-    "es5-shim": "^4.0.0",
+    "angular": "^1.3.15",
+    "angular-gettext": "^2.0.3",
+    "blockies": "^0.1.1",
     "bootstrap-sass-official": "^3.2.0",
-    "ngstorage": "~0.3.0",
-    "lodash": "~2.4.1",
-    "ng-img-crop": "~0.3.2",
-    "unchatbar-connection": "https://github.com/unchatbar/unchatbar-connection.git#0.1.x",
-    "blockies": "~0.1.1",
-    "angular-gettext": "~2.0.3",
-    "components-font-awesome": "~4.3.0"
+    "components-font-awesome": "^4.3.0",
+    "es5-shim": "^4.0.0",
+    "json3": "^3.3.0",
+    "lodash": "^2.4.1",
+    "ng-img-crop": "^0.3.2",
+    "ngstorage": "^0.3.0",
+    "unchatbar-connection": "https://github.com/unchatbar/unchatbar-connection.git#0.1.x"
   },
   "main": [
     "app/scripts/app.js",
@@ -25,12 +25,11 @@
     "app/styles/main.scss"
   ],
   "devDependencies": {
-    "angular-mocks": "~1.3.0",
-    "angular-scenario": "~1.3.0"
+    "angular-mocks": "^1.3.15",
+    "angular-scenario": "^1.3.15"
   },
   "appPath": "app",
   "resolutions": {
-    "angular": "^1.3.0",
-    "peerjs": "b00bdee1d3c1615e73f94f4f2f00b0d118b7cff3"
+    "angular": "^1.3.15"
   }
 }
