--- a/package.json
+++ b/package.json
@@ -13,21 +13,19 @@
     "test": "grunt test"
   },
   "dependencies": {
+    "bower": "^1.3.2",
     "connect-modrewrite": "^0.7.9",
     "express": "^4.10.6",
     "express-spa-router": "^0.0.8",
-    "gzippo": "^0.2.0",
-    "morgan": "^1.5.0",
-    "bower": "^1.3.2",
     "grunt": "^0.4.2",
     "grunt-angular-templates": "^0.5.7",
     "grunt-autoprefixer": "^0.7.3",
     "grunt-cli": "^0.1.13",
     "grunt-concurrent": "^0.5.0",
     "grunt-contrib-clean": "^0.5.0",
+    "grunt-contrib-compass": "^1.0.0",
     "grunt-contrib-concat": "^0.4.0",
     "grunt-contrib-connect": "^0.7.1",
-    "grunt-contrib-compass": "^1.0.0",
     "grunt-contrib-copy": "^0.5.0",
     "grunt-contrib-cssmin": "^0.9.0",
     "grunt-contrib-htmlmin": "^0.3.0",
@@ -45,17 +43,18 @@
     "grunt-svgmin": "^0.4.0",
     "grunt-usemin": "^2.1.1",
     "grunt-wiredep": "^2.0.0",
+    "gzippo": "^0.2.0",
     "jasmine-core": "^2.1.3",
     "jshint-stylish": "^0.2.0",
     "load-grunt-tasks": "^0.4.0",
-    "time-grunt": "^0.3.1",
-    "unchatbar-server": "git://github.com/unchatbar/unchatbar-server.git"
+    "morgan": "^1.5.0",
+    "time-grunt": "^0.3.1"
   },
   "devDependencies": {
-    "grunt-bump": "^0.3.0",
     "grunt-angular-gettext": "^2.0.1",
-    "karma": "^0.12.28",
+    "grunt-bump": "^0.3.0",
     "grunt-nodemon": "^0.4.0",
+    "karma": "^0.12.28",
     "karma-coverage": "^0.2.7",
     "karma-jasmine": "^0.3.5",
     "karma-phantomjs-launcher": "^0.1.4"
