--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,7 @@
     "lodash": "^2.4.1",
     "ng-img-crop": "^0.3.2",
     "ngstorage": "^0.3.0",
-    "unchatbar-connection": "https://github.com/unchatbar/unchatbar-connection.git#0.1.x"
+    "unchatbar-connection": "^0.1.4"
   },
   "main": [
     "app/scripts/app.js",
@@ -21,8 +21,7 @@
     "app/scripts/service/*.js",
     "app/scripts/controller/*.js",
     "app/scripts/directive/*.js",
-    "app/styles/custom.css",
-    "app/styles/main.scss"
+    "app/styles/_components.scss"
   ],
   "devDependencies": {
     "angular-mocks": "^1.3.15",
